--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 APScheduler==3.7.0
 click==7.1.2
 Flask==1.1.2
+Flask-SQLAlchemy==2.5.1
+greenlet==1.0.0
 gunicorn==20.1.0
+importlib-metadata==4.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 pytz==2021.1
 six==1.15.0
+SQLAlchemy==1.4.12
+typing-extensions==3.7.4.3
 tzlocal==2.1
 Werkzeug==1.0.1
+zipp==3.4.1
